Max sizes for burger + drink, wrap for drink buttons. Still working on fixing the reset bug for the sides but I can do a smaller pr to do that later.

--- a/frontend/src/components/DrinkBuilder.css
+++ b/frontend/src/components/DrinkBuilder.css
@@ -7,6 +7,7 @@
     justify-content: center;
     margin-top: 20px;
     gap: 10px;
+    flex-wrap: wrap;
 }
 
 .DrinkButtons button{
@@ -61,7 +62,7 @@
 
 .DrinkLayer{
     width: 100%;
-    min-height: 60px;
+    min-height: 30px;
     text-align: center;
     line-height: 20px;
     color:#ffffff;
